CORE-19591: PB SPC Bank details arabic spacing fix.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/spc-checkout-confirmation/component/_spc-checkout-order-detail.scss
@@ -22,6 +22,10 @@
               &:first-child {
                 font-weight: 600;
                 text-transform: capitalize;
+
+                html[lang=ar] & {
+                  line-height: 1.7;
+                }
               }
 
               html[lang=ar] & {
